fix: style (not visible asset)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,8 +14,9 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(var(--column-width), 1fr));
     grid-auto-rows: var(--row-height);
-    grid-gap: var(4px);
-    margin: 20px 0;
+    grid-gap: 8px;
+    margin-left:15px;
+    margin-right:15px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -34,9 +35,12 @@
 
 .collection-img-span2 {
     grid-row-end: span 2;
+    width: 100%;
+    height: 100%;
 }
 
 /* Record Image Grid */
+
 .record-grid-container{
     --gap-length: 2px;
     --row-height: 200px;
